// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Single Code Tab Transformer > wraps single code blocks with tabs if they have a lang set 1`] = `
{
  "children": [
    {
      "lang": "javascript",
      "meta": null,
      "position": {
        "end": {
          "column": 4,
          "line": 4,
          "offset": 44,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "code",
      "value": "const languageSet = true;",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 5,
      "offset": 45,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Single Code Tab Transformer > wraps single code blocks with tabs if they have a title set 1`] = `
{
  "children": [
    {
      "lang": "javascript",
      "meta": "Testing",
      "position": {
        "end": {
          "column": 4,
          "line": 4,
          "offset": 52,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "code",
      "value": "const languageSet = true;",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 5,
      "offset": 53,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
